--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "uniquote-web",
   "version": "0.0.0",
   "scripts": {
@@ -32,8 +33,10 @@
     "@ng-icons/core": "^32.3.0",
     "@ng-icons/lucide": "^32.3.0",
     "@spartan-ng/brain": "^0.0.1-alpha.547",
+    "apexcharts": "^5.3.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "ng-apexcharts": "^2.0.3",
     "rxjs": "~7.8.0",
     "tailwind-merge": "^3.3.1",
     "tslib": "^2.3.0",
