--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "apexcharts": "^5.3.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "lucide-angular": "^0.554.0",
     "ng-apexcharts": "^2.0.3",
     "rxjs": "~7.8.0",
     "tailwind-merge": "^3.3.1",
