--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "lucide-angular": "^0.554.0",
     "ng-apexcharts": "^2.0.3",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.26.10",
     "tailwind-merge": "^3.3.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
